admission/ValidatingAdmissionPolicy/policies/external-ips/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-external-ips-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6dfa90b1-5902-5a18-a066-ab0d84833bb6
  labels:
    check-service-external-ips.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    check-service-external-ips.security.kolteq.com/audit: 'false-true'
    check-service-external-ips.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: service-external-ips
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-service-external-ips.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-external-ips-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6dfa90b1-5902-5a18-a066-ab0d84833bb6
  labels:
    check-service-external-ips.security.kolteq.com/warn: 'false-true'
    check-service-external-ips.security.kolteq.com/audit: 'false-true'
    check-service-external-ips.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-external-ips
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-service-external-ips.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-external-ips-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6dfa90b1-5902-5a18-a066-ab0d84833bb6
  labels:
    check-service-external-ips.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    check-service-external-ips.security.kolteq.com/enforce: 'false-true'
    check-service-external-ips.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-external-ips
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-service-external-ips.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-external-ips-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6dfa90b1-5902-5a18-a066-ab0d84833bb6
  labels:
    check-service-external-ips.security.kolteq.com/audit: 'false-true'
    check-service-external-ips.security.kolteq.com/enforce: 'false-true'
    check-service-external-ips.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-external-ips
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-service-external-ips.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-external-ips-namespace-optout-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6dfa90b1-5902-5a18-a066-ab0d84833bb6
  labels:
    check-service-external-ips.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    check-service-external-ips.security.kolteq.com/audit: 'false-true'
    check-service-external-ips.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-external-ips
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-service-external-ips.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-external-ips-namespace-optin-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6dfa90b1-5902-5a18-a066-ab0d84833bb6
  labels:
    check-service-external-ips.security.kolteq.com/enforce: 'false-true'
    check-service-external-ips.security.kolteq.com/audit: 'false-true'
    check-service-external-ips.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-external-ips
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-service-external-ips.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
